--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "4.1.0",
     "@codetrix-studio/capacitor-google-auth": "^3.2.0",
     "@ionic/angular": "^6.1.9",
+    "flag-icons": "^6.6.6",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
